--- a/ClientProject/Client/pom.xml
+++ b/ClientProject/Client/pom.xml
@@ -18,6 +18,11 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<dependency>
+		<groupId>com.fasterxml.jackson.datatype</groupId>
+		<artifactId>jackson-datatype-jsr310</artifactId>
+	</dependency>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -35,6 +40,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
 	</dependencies>
 
 	<build>
