--- a/ClientProject/Gui/pom.xml
+++ b/ClientProject/Gui/pom.xml
@@ -56,6 +56,10 @@
 			<artifactId>javafx-fxml</artifactId>
 			<version>11</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
 
 	</dependencies>
 
