--- a/ClientProject/Gui/pom.xml
+++ b/ClientProject/Gui/pom.xml
@@ -61,6 +61,23 @@
 			<artifactId>spring-test</artifactId>
 		</dependency>
 
+		<!-- generating pdf - start -->
+
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.13.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.56</version>
+		</dependency>
+
+		<!-- generating pdf - end -->
+
+
 	</dependencies>
 
 	<build>
