pridanie funkcionality vyberu typu eventu

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -43,6 +43,7 @@ belong=Belongs to:
 # Event detail
 titleLabel=Title:
 locationLabel=Location:
+typeLabel=Type: 
 startsLabel=Starts:
 endsLabel=Ends:
 alertLabel=Alert:
