--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -84,3 +84,9 @@ postponeLabel=Postpone alert by:
 error=Error
 errorAlertHeader=Oops something's gone wrong!
 errorAlertContext=Try it later please.
+
+eventsInMonthErrorMessage=Oops, can't show events in calendar
+getEventErrorMessage=Oops, can't get event info
+addEventErrorMessage=Oops, can't save event
+updateEventErrorMessage=Oops, can't update event
+deleteEventErrorMessage=Oops, can't delete event
