vytahovanie uri z konfiguracie na events clientovi + bug fix na serveri pri prihlasovani

--- a/ClientProject/Gui/src/main/resources/uri.properties
+++ b/ClientProject/Gui/src/main/resources/uri.properties
@@ -1,17 +1,17 @@
 base-uri=http://localhost:8080
 
 # events uri's
-events-uri=/events
-events-by-month-uri=/{userId}/{year}/{month}
-event-uri=/{idUser}/{idEvent}
-events-alert-uri=/alert/{idUser}/{currentTime}
-update-event-uri=/{idEvent}
-delete-event-uri=/{idUser}/{idEvent}
+events-endpoint=/events
+events-by-month-endpoint=/{userId}/{year}/{month}
+event-endpoint=/{idUser}/{idEvent}
+events-alert-endpoint=/alert/{idUser}/{currentTime}
+update-event-endpoint=/{idEvent}
+delete-event-endpoint=/{idUser}/{idEvent}
 
 # users uri's
 users-endpoint=/users
 login-endpoint=/{userName}/{userPassword}
-#register-uri=/users
+#register-endpoint=/users
 
 # weather uri's
 get-public-ip-uri=https://api.ipify.org?format=json
