zmena api na ziskanie verejnej ip adresy, vytvaranie alert okien vo funkciach vo windows creator

--- a/ClientProject/Gui/src/main/resources/uri.properties
+++ b/ClientProject/Gui/src/main/resources/uri.properties
@@ -14,5 +14,5 @@ login-endpoint=/{userName}/{userPassword}
 #register-endpoint=/users
 
 # weather uri's
-get-public-ip-uri=https://api.ipify.org?format=json
+get-public-ip-uri=https://ip.seeip.org/jsonip?
 weather-endpoint=/weather/{ip}
