render kalendaru po update eventu - treba este pridat nejake podmienky

--- a/ClientProject/Gui/src/main/resources/uri.properties
+++ b/ClientProject/Gui/src/main/resources/uri.properties
@@ -2,6 +2,7 @@ base-uri=http://localhost:8080
 
 # events uri's
 events-endpoint=/events
+events-by-date-endpoint=/{userId}/?date={date}
 events-by-month-endpoint=/{userId}/{year}/{month}
 event-endpoint=/{idUser}/{idEvent}
 events-alert-endpoint=/alert/{idUser}/{currentTime}
@@ -11,7 +12,6 @@ delete-event-endpoint=/{idUser}/{idEvent}
 # users uri's
 users-endpoint=/users
 login-endpoint=/{userName}/{userPassword}
-#register-endpoint=/users
 
 # weather uri's
 get-public-ip-uri=https://ip.seeip.org/jsonip?
