uprava validacie vstupu v AddEvent

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -51,6 +51,7 @@ descriptionLabel=Description:
 
 timeErrorLabel=Wrong time format
 titleErrorLabel=Title field can't be empty
+dateErrorLabel=Date field can't be empty
 
 saveButton=Save
 deleteButton=Delete
