--- a/ClientProject/Gui/pom.xml
+++ b/ClientProject/Gui/pom.xml
@@ -73,8 +73,13 @@
 			<artifactId>bcprov-jdk15on</artifactId>
 			<version>1.56</version>
 		</dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.9</version>
+        </dependency>
 
-		<!-- generating pdf - end -->
+        <!-- generating pdf - end -->
 
 
 	</dependencies>
