--- a/ClientProject/Gui/src/main/resources/uri.properties
+++ b/ClientProject/Gui/src/main/resources/uri.properties
@@ -4,7 +4,7 @@ base-uri=http://localhost:8080
 events-endpoint=/events
 events-by-date-endpoint=/{userId}/?date={date}
 events-by-month-endpoint=/{userId}/{year}/{month}
-event-endpoint=/{idUser}/{idEvent}
+event-endpoint=/{idUser}/{idEvent}/?date={date}
 events-alert-endpoint=/alert/{idUser}/{currentTime}
 update-event-endpoint=/{idEvent}
 delete-event-endpoint=/{idUser}/{idEvent}
