multilanguage pre choicebox s typmi eventov

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -91,3 +91,9 @@ getEventErrorMessage=Oops, can't get event info!
 addEventErrorMessage=Oops, can't save event!
 updateEventErrorMessage=Oops, can't update event!
 deleteEventErrorMessage=Oops, can't delete event!
+
+# Event types
+freeTime=Free time
+work=Work
+school=School
+others=Others
