--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -97,3 +97,9 @@ freeTime=Free time
 work=Work
 school=School
 others=Others
+
+# Repetition types
+daily=Daily
+weekly=Weekly
+monthly=Monthly
+yearly=Yearly
