vytvorenie komponentu WeeklyRepetitionComponent

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -103,3 +103,13 @@ daily=Daily
 weekly=Weekly
 monthly=Monthly
 yearly=Yearly
+
+# Repetition labels
+repetitionIntervalFirstLabel=Every
+repetitionIntervalDayLabel=. day
+repetitionIntervalWeekLabel=. week
+repetitionIntervalMonthLabel=. month
+repetitionIntervalYearLabel=. year
+
+# Repetition error labels
+repetitionIntervalErrorLabel=Insert please number from range 1 to 999
