refaktoring Daily a WeeklyRepetition komponentov, inicializacia niektorych casti MonthlyRepetitionComponent

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -111,5 +111,8 @@ repetitionIntervalWeekLabel=. week
 repetitionIntervalMonthLabel=. month
 repetitionIntervalYearLabel=. year
 
+dayOfMonthLabel=On day no.
+dayOfWeekWithOrdinalLabel=On
+
 # Repetition error labels
 repetitionIntervalErrorLabel=Insert please number from range 1 to 999
