dokoncenie ui casti MonthlyRepetitionComponent

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -113,6 +113,8 @@ repetitionIntervalYearLabel=. year
 
 dayOfMonthLabel=On day no.
 dayOfWeekWithOrdinalLabel=On
+lastLabel=last
+
 
 # Repetition error labels
 repetitionIntervalErrorLabel=Insert please number from range 1 to 999
