metoda setRepetitionIntervalCaption v Repetition komponentoch

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -115,6 +115,8 @@ dayOfMonthLabel=On day no.
 dayOfWeekWithOrdinalLabel=On
 lastLabel=last
 
+monthSelectionLabel=in month
+
 
 # Repetition error labels
 repetitionIntervalErrorLabel=Insert please number from range 1 to 999
