inicializacia hodnot v poliach, zobrazenie detailu repetition

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -105,6 +105,8 @@ monthly=Monthly
 yearly=Yearly
 
 # Repetition labels
+repetitionButton=Repeat
+editRepetitionButton=Edit repetition
 repetitionIntervalFirstLabel=Every
 repetitionIntervalDayLabel=. day
 repetitionIntervalWeekLabel=. week
