preklikavania pomocou repetitionButton

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -54,7 +54,9 @@ titleErrorLabel=Title field can't be empty
 dateErrorLabel=Date field can't be empty
 
 saveButton=Save
+saveAllButton=Save all
 deleteButton=Delete
+deleteAllButton=Delete all
 
 # Alerts
 loginAlertContent=Please enter your username and password before logging in
@@ -118,7 +120,6 @@ dayOfWeekWithOrdinalLabel=On
 lastLabel=last
 
 monthSelectionLabel=in month
-
 
 # Repetition error labels
 repetitionIntervalErrorLabel=Insert please number from range 1 to 999
