--- a/ClientProject/Gui/src/main/resources/uri.properties
+++ b/ClientProject/Gui/src/main/resources/uri.properties
@@ -7,6 +7,7 @@ events-by-month-endpoint=/{userId}/{year}/{month}
 event-endpoint=/{idUser}/{idEvent}/?date={date}
 events-alert-endpoint=/alert/{idUser}/{currentTime}
 update-event-endpoint=/{idUser}/{idEvent}
+update-repetition-endpoint=/repetition/{idUser}/{idEvent}
 delete-event-endpoint=/{idUser}/{idEvent}
 
 # users uri's
