fungujuce mazanie eventu z repetition aj so spravnym prekreslenim v kalendari

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -51,7 +51,6 @@ descriptionLabel=Description:
 
 timeErrorLabel=Wrong time format
 titleErrorLabel=Title field can't be empty
-dateErrorLabel=Date field can't be empty
 
 saveButton=Save
 saveAllButton=Save all
@@ -74,6 +73,8 @@ pdfAlertContent=PDF version of your calendar was saved.
 deleteConfirmationTitle=Delete confirmation
 deleteConfirmationHeaderText=You are deleting event: 
 deleteConfirmationQuestion=Do you really want to delete this event?
+deleteAllConfirmationHeaderText=You are deleting all events from repetition: 
+deleteAllConfirmationQuestion=Do you really want to delete all events from this repetition?
 
 # Alert
 postponeButton=Postpone
