--- a/ClientProject/Gui/src/main/resources/uri.properties
+++ b/ClientProject/Gui/src/main/resources/uri.properties
@@ -9,6 +9,7 @@ events-alert-endpoint=/alert/{idUser}/{currentTime}
 update-event-endpoint=/{idUser}/{idEvent}
 update-repetition-endpoint=/repetition/{idUser}/{idEvent}
 delete-event-endpoint=/{idUser}/{idEvent}
+delete-from-repetition-endpoint=/repetition/{idUser}/{idEvent}/{date}
 
 # users uri's
 users-endpoint=/users
