--- a/ServerProject/src/main/resources/application.properties
+++ b/ServerProject/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/planitdatabase
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=postgres
