--- a/ServerProject/src/main/resources/application.properties
+++ b/ServerProject/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/planitdatabase
+#spring.datasource.url=jdbc:postgresql://localhost:5432/planitdatabase
+spring.datasource.url=jdbc:postgresql://localhost:5432/planit_2
 spring.datasource.username=postgres
 spring.datasource.password=postgres
