funkcny pripad pouzitia registracie noveho pouzivatela

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -67,6 +67,9 @@ registrationEmptyAlertContent=Please enter all information.
 registrationExistsAlertTitle=Username already exists.
 registrationExistsAlertContent=Please enter some other username.
 
+successfulRegistrationAlertTitle=Registration successful
+successfulRegistrationAlertContent=Continue with login
+
 pdfAlertTitle=PDF file was created!
 pdfAlertContent=PDF version of your calendar was saved.
 
