uprava status kodu pri autentifikacii pomocou jwt, premenovanie tried security filtrov

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -58,7 +58,7 @@ deleteButton=Delete
 deleteAllButton=Delete all
 
 # Alerts
-loginAlertContent=Please enter your username and password before logging in
+loginAlertContent=Please provide valid credentials
 loginEmptyAlertTitle=You didn't fill all fields.
 loginWrongAlertTitle=Incorrect username or password has been entered.
 
