fix api volania na upravu eventu v opakovani, vytvorenie novych gui elementov v obrazovke pridania udalosti

--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -113,6 +113,7 @@ yearly=Yearly
 # Repetition labels
 repetitionButton=Repeat
 editRepetitionButton=Edit repetition
+hideRepetitionButton=Hide repetition
 repetitionIntervalFirstLabel=Every
 repetitionIntervalDayLabel=. day
 repetitionIntervalWeekLabel=. week
