--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -97,6 +97,17 @@ getEventErrorMessage=Oops, can't get event info!
 addEventErrorMessage=Oops, can't save event!
 updateEventErrorMessage=Oops, can't update event!
 deleteEventErrorMessage=Oops, can't delete event!
+eventNotFoundErrorMessage=Event does not exist.
+getEventAccessDeniedErrorMessage=You do not have permission to get event info.
+updateEventAccessDeniedErrorMessage=You do not have permission to update event.
+deleteEventAccessDeniedErrorMessage=You do not have permission to delete event.
+
+addRepetitionErrorMessage=Oops, can't add repetition!
+updateRepetitionErrorMessage=Oops, can't update repetition!
+repetitionNotFoundErrorMessage=Repetition does not exist.
+updateRepetitionAccessDeniedErrorMessage=You do not have permission to update repetition.
+deleteRepetitionAccessDeniedErrorMessage=You do not have permission to delete repetition.
+addRepetitionAccessDeniedErrorMessage=You do not have permission to add repetition.
 
 # Event types
 freeTime=Free time
@@ -112,8 +123,9 @@ yearly=Yearly
 
 # Repetition labels
 repetitionButton=Repeat
-editRepetitionButton=Edit repetition
 hideRepetitionButton=Hide repetition
+saveRepetitionButton=Save repetition
+editRepetitionButton=Edit repetition
 repetitionIntervalFirstLabel=Every
 repetitionIntervalDayLabel=. day
 repetitionIntervalWeekLabel=. week
