--- a/ClientProject/Gui/src/main/resources/captions.properties
+++ b/ClientProject/Gui/src/main/resources/captions.properties
@@ -1,7 +1,7 @@
 # Login window and registration window
 loginLabel=Log in
-usernameLabel=Username
-passwordLabel=Password
+usernameLabel=Username:
+passwordLabel=Password:
 loginButton=Login
 registerButton=Register
 changeLanguageButton=Change language
