--- a/ClientProject/Gui/src/main/resources/uri.properties
+++ b/ClientProject/Gui/src/main/resources/uri.properties
@@ -1,21 +1,5 @@
+# root uri of backend
 base-uri=http://localhost:8080
 
-# events uri's
-events-endpoint=/events
-events-by-date-endpoint=/{userId}/?date={date}
-events-by-month-endpoint=/{userId}/{year}/{month}
-event-endpoint=/{idUser}/{idEvent}/?date={date}
-events-alert-endpoint=/alert/{idUser}/{currentTime}
-update-event-endpoint=/{idUser}/{idEvent}
-update-event-in-repetition-endpoint=/{idUser}/{idEvent}/{date}
-update-repetition-endpoint=/repetition/{idUser}/{idEvent}
-delete-event-endpoint=/{idUser}/{idEvent}
-delete-from-repetition-endpoint=/repetition/{idUser}/{idEvent}/{date}
-
-# users uri's
-users-endpoint=/users
-login-endpoint=/{userName}/{userPassword}
-
-# weather uri's
+# uri of service for retrieving public IP of client
 get-public-ip-uri=https://ip.seeip.org/jsonip?
-weather-endpoint=/weather/{ip}
